--- a/exercises/assets/css/style-1.css
+++ b/exercises/assets/css/style-1.css
@@ -50,6 +50,11 @@ select {
 }
 
 /* ================= ENDS ================ */
+
+body {
+    background-color: lightcyan
+}
+
 /* Desktops */
 @media (min-width: 768px) {
     body {
@@ -82,9 +87,16 @@ h3 {
     margin-bottom: 4px;
 }
 
+h1,
+h2,
+h3 {
+    color: blue;
+}
+
 p {
     font-size: 18px;
     font-family: sans-serif;
     line-height: 1.6;
     margin-bottom: 20px;
+    color: darkslateblue;
 }
