--- a/exercises/assets/css/style-2.css
+++ b/exercises/assets/css/style-2.css
@@ -51,6 +51,10 @@ select {
 
 /* ================= ENDS ================ */
 /* Desktops */
+body {
+    background-color: antiquewhite
+}
+
 @media (min-width: 768px) {
     body {
         padding: 4% 20%
@@ -85,6 +89,12 @@ h2 {
 h3 {
     font-size: 32px;
     margin-bottom: 4px;
+}
+
+h1,
+h2,
+h3 {
+    color: brown;
 }
 
 p {
