--- a/exercises/assets/css/style-3.css
+++ b/exercises/assets/css/style-3.css
@@ -50,6 +50,10 @@ select {
 }
 
 /* ================= ENDS ================ */
+body {
+    background-color: purple
+}
+
 /* Desktops */
 @media (min-width: 768px) {
     body {
@@ -79,9 +83,17 @@ h2 {
     text-transform: uppercase;
 }
 
+h1,
+h2,
+p {
+    color: white;
+}
+
 p {
     font-size: 20px;
     font-family: sans-serif;
     line-height: 1.6;
     margin-bottom: 20px;
 }
+
+a { color: white }
