--- a/exercises/assets/css/style-4.css
+++ b/exercises/assets/css/style-4.css
@@ -66,6 +66,7 @@ select {
 
 body {
     font-family: sans-serif;
+    background-color: #1f364d
 }
 
 h1 {
@@ -73,6 +74,7 @@ h1 {
     margin-bottom: 48px;
     font-weight: normal;
     letter-spacing: 4px;
+    color: white;
 }
 
 h2 {
@@ -80,6 +82,7 @@ h2 {
     margin-top: 30px;
     margin-bottom: 4px;
     letter-spacing: 1px;
+    color: deeppink;
 }
 
 h3 {
@@ -87,10 +90,16 @@ h3 {
     margin-top: 42px;
     margin-bottom: 4px;
     letter-spacing: 1px;
+    color: lightgreen;
 }
 
 p {
     font-size: 18px;
     line-height: 1.6;
     margin-bottom: 20px;
+    color: #81b8cd;
+}
+
+a {
+    color: white
 }
