--- a/exercises/assets/css/style-5.css
+++ b/exercises/assets/css/style-5.css
@@ -76,7 +76,7 @@ body {
 /* Main heading */
 h1 {
 
-    font-size: calc(48px + (84 - 48) * ((100vw - 320px) / (1600 - 320))); 
+    font-size: calc(48px + (84 - 48) * ((100vw - 320px) / (1600 - 320)));
     line-height: 1.1;
     font-weight: normal;
     color: #3434B0;
@@ -88,7 +88,7 @@ h1 {
 /* Small headings */
 h2 {
 
-    font-size: calc(18px + (26 - 18) * ((100vw - 320px) / (1600 - 320))); 
+    font-size: calc(18px + (26 - 18) * ((100vw - 320px) / (1600 - 320)));
     color: #3434B0;
     line-height: 1.5;
     margin-bottom: 42px;
@@ -97,7 +97,7 @@ h2 {
 /* Smaller headings */
 h3 {
 
-    font-size: calc(32px + (38 - 32) * ((100vw - 320px) / (1600 - 320))); 
+    font-size: calc(32px + (38 - 32) * ((100vw - 320px) / (1600 - 320)));
     color: #000;
     letter-spacing: -1px;
     margin-top: 40px;
@@ -108,7 +108,7 @@ h3 {
 /* Text paragraphs */
 p {
 
-    font-size: calc(16px + (21 - 16) * ((100vw - 320px) / (1600 - 320)));  
+    font-size: calc(16px + (21 - 16) * ((100vw - 320px) / (1600 - 320)));
     color: #455C80;
     line-height: 1.6;
     margin-top: 0;
@@ -120,4 +120,25 @@ img {
     margin-bottom: 42px;
     /* Drop shadow effect at right and bottom of image */
     box-shadow: 8px 10px 8px #888;
+}
+
+/* Passive link styles */
+
+a:link,
+a:visited {
+    text-decoration: none;
+    padding-bottom: 2px;
+    color: #000;
+    border-bottom: solid 2px #000;
+}
+
+/* Interactive link styles */
+
+a:hover,
+a:focus,
+a:active {
+    text-decoration: none;
+    padding-bottom: 2px;
+    color: #f26f21;
+    border-bottom: solid 2px blue;
 }
